Fix layout bug

--- a/src/components/pages/Oppsummering/Oppsummering.less
+++ b/src/components/pages/Oppsummering/Oppsummering.less
@@ -1,6 +1,7 @@
 .Oppsummering__right-col,
 .Oppsummering .panel {
     flex: 1;
+    overflow-x: hidden;
 }
 
 .Oppsummering {
